search export fixed
